# internal/app/http/docs/swagger.yaml
@@ -5,14 +5,7 @@ definitions:
       message:
         type: string
     type: object
-  usecase.OAuthAuthenticationDTO:
-    properties:
-      email:
-        type: string
-    required:
-    - email
-    type: object
-  usecase.UpsertUserSettingDTO:
+  dto.UpsertUserSettingRequestDTO:
     properties:
       meuPluggyAccountIDs:
         items:
@@ -26,10 +19,12 @@ definitions:
         type: string
       notionToken:
         type: string
-      userID:
-        type: string
     required:
-    - userID
+    - meuPluggyAccountIDs
+    - meuPluggyClientID
+    - meuPluggyClientSecret
+    - notionPageID
+    - notionToken
     type: object
 info:
   contact:
@@ -39,6 +34,23 @@ info:
   title: OpenFinance to Notion API
   version: "1.0"
 paths:
+  /auth/login/google:
+    get:
+      consumes:
+      - application/json
+      description: This endpoint is responsible for starting OAuth authentication.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponseDTO'
+      summary: BeginOAuth.
+      tags:
+      - Auth
   /to-notion:
     post:
       consumes:
@@ -69,34 +81,6 @@ paths:
       summary: OpenFinance to Notion.
       tags:
       - Notion
-  /users:
-    post:
-      consumes:
-      - application/json
-      description: This endpoint is responsible for receiving oauth callbacks.
-      parameters:
-      - description: Auth
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/usecase.OAuthAuthenticationDTO'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponseDTO'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponseDTO'
-      summary: OAuth Callback.
-      tags:
-      - Auth
   /users/me/settings:
     post:
       consumes:
@@ -108,7 +92,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/usecase.UpsertUserSettingDTO'
+          $ref: '#/definitions/dto.UpsertUserSettingRequestDTO'
       produces:
       - application/json
       responses:
