# internal/app/http/dto/setting.go
@@ -1,0 +1,9 @@
+package dto
+
+type UpsertUserSettingRequestDTO struct {
+	NotionToken           string   `validate:"required"`
+	NotionPageID          string   `validate:"required"`
+	MeuPluggyClientID     string   `validate:"required"`
+	MeuPluggyClientSecret string   `validate:"required"`
+	MeuPluggyAccountIDs   []string `validate:"required"`
+}
