# internal/app/http/handler/setting.go
@@ -1,23 +1,28 @@
 package handler
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/gofiber/fiber/v2"
 
 	"github.com/danielmesquitta/openfinance/internal/app/http/middleware"
 	"github.com/danielmesquitta/openfinance/internal/domain/usecase"
+	"github.com/danielmesquitta/openfinance/pkg/logger"
 )
 
 type SettingHandler struct {
 	uuc *usecase.UpsertUserSettingUseCase
+	l   *logger.Logger
 }
 
 func NewSettingHandler(
 	uuc *usecase.UpsertUserSettingUseCase,
+	l *logger.Logger,
 ) *SettingHandler {
 	return &SettingHandler{
 		uuc: uuc,
+		l:   l,
 	}
 }
 
@@ -27,22 +32,25 @@ func NewSettingHandler(
 // @Accept json
 // @Produce json
 // @Security BearerAuth
-// @Param request body usecase.UpsertUserSettingDTO true "Request body"
+// @Param request body dto.UpsertUserSettingRequestDTO true "Request body"
 // @Success 200
 // @Failure 400 {object} dto.ErrorResponseDTO
 // @Failure 500 {object} dto.ErrorResponseDTO
 // @Router /users/me/settings [post]
 func (h *SettingHandler) Upsert(c *fiber.Ctx) error {
-	dto := usecase.UpsertUserSettingDTO{}
-	if err := c.BodyParser(&dto); err != nil {
-		return err
+	data := usecase.UpsertUserSettingDTO{}
+	if err := c.BodyParser(&data); err != nil {
+		return fmt.Errorf("error parsing request body: %w", err)
 	}
 
 	userID := c.Locals(middleware.UserIDKey).(string)
-	dto.UserID = userID
+	data.UserID = userID
 
-	if err := h.uuc.Execute(dto); err != nil {
-		return err
+	if err := h.uuc.Execute(data); err != nil {
+		return fmt.Errorf(
+			"error executing upsert user setting use case: %w",
+			err,
+		)
 	}
 
 	return c.SendStatus(http.StatusOK)
